[package]
name = "minimum_cs_hsapso"
authors = ["Babak Karimi Bavandpour <babak.karimi93@gmail.com>"]
version = "1.0.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
rand = "0.8.4"
dialoguer = "0.11.0"
humantime = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"

[profile.release]
debug = false
